# cargo-buckal

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/actions/install-buck2/: action.yml
.github/actions/setup-windows/: action.yml
.github/scripts/: review_agent.py
.github/workflows/: _buck2-build-test.yml  _buck2-generate.yml  _buck2-verify-cross-platform.yml  base.yml  build-and-test.yml  check-build-and-test.yml  claude-review.yml  gemini-review.yml  integration-test-cargo-buckal.yml  integration-test-fd.yml  integration-test-git-internal.yml  integration-test-libra.yml  integration-test-monorepo-demo.yml  lint.yml  test-init-new-commands.yml
bundles/buckal/: cargo_manifest.bzl
src/: buck.rs  buck2.rs  buckify.rs  bundles.rs  cache.rs  cli.rs  config.rs  context.rs  main.rs  platform.rs  registry.rs  utils.rs
src/buckify/: actions.rs  deps.rs  emit.rs  mod.rs  rules.rs  windows.rs
src/commands/: add.rs  autoremove.rs  build.rs  clean.rs  init.rs  login.rs  logout.rs  migrate.rs  mod.rs  new.rs  push.rs  remove.rs  test.rs  update.rs  version.rs
testcases/: git_repo.BUCK  invalid_starlark.BUCK  literal_with_dynamic_select.BUCK  required_fields_missing.BUCK  single_build_script_run.BUCK  single_cargo_manifest.BUCK  single_export_file.BUCK  single_file_group.BUCK  single_git_fetch.BUCK  single_http_archive.BUCK  single_load.BUCK  single_rust_binary.BUCK  single_rust_library.BUCK  single_rust_test.BUCK  workspace_member.BUCK
(+3 files in other folders)
