[package]
name = "cargo-buckal"
version = "0.0.0"
edition = "2024"

[dependencies]
cargo-platform = "0.3.0"
cargo_metadata = "0.22.0"
clap = { version = "4.5.41", features = ["derive"] }
fs_extra = "1.3.0"
indoc = "2.0.6"
itertools = "0.14.0"
semver = "1.0.26"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_starlark = "0.1.17"
colored = "2.0"
inquire = "0.7.5"
toml = "0.8"
